tests/gabc-dump/should-fail/unclosed-overbrace-2.gabc
name: unclosed overbrace (2);
%%
(c4) g(g) h(h[ob:1{]) i(i[ocb:0{])
